ES2017: Allow 'await' as identifier outside async functions and modules
Per ES2017 spec, 'await' is only a reserved word inside async functions
and module code. Outside these contexts, it can be used as an identifier.

Fixes 3 test262 tests.

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -2950,7 +2950,7 @@ language/expressions/assignment 55/485 (11.34%)
     assignment-operator-calls-putvalue-lref--rval-.js non-strict
     assignment-operator-calls-putvalue-lref--rval--1.js non-strict
 
-language/expressions/assignmenttargettype 19/324 (5.86%)
+language/expressions/assignmenttargettype 18/324 (5.56%)
     direct-arrowfunction-1.js
     direct-asyncarrowfunction-1.js
     direct-callexpression.js strict
@@ -2969,7 +2969,6 @@ language/expressions/assignmenttargettype 19/324 (5.86%)
     parenthesized-memberexpression-templateliteral.js
     parenthesized-optionalexpression.js
     parenthesized-primaryexpression-objectliteral.js
-    simple-basic-identifierreference-await.js
 
 language/expressions/async-arrow-function 8/60 (13.33%)
     await-as-param-ident-nested-arrow-parameter-position.js
@@ -3053,17 +3052,12 @@ language/expressions/async-generator 54/623 (8.67%)
     yield-star-next-then-returns-abrupt.js
     yield-star-sync-throw.js
 
-language/expressions/await 14/22 (63.64%)
+language/expressions/await 9/22 (40.91%)
     async-await-interleaved.js
     async-generator-interleaved.js
     await-awaits-thenables.js
     await-awaits-thenables-that-throw.js
     await-BindingIdentifier-in-global.js
-    await-in-function.js
-    await-in-generator.js
-    await-in-global.js
-    await-in-nested-function.js
-    await-in-nested-generator.js
     await-monkey-patched-promise.js
     await-non-promise.js
     await-non-promise-thenable.js
@@ -3921,7 +3915,7 @@ language/expressions/class 868/4059 (21.38%)
     scope-static-gen-meth-paramsbody-var-open.js
     scope-static-meth-paramsbody-var-open.js
     scope-static-setter-paramsbody-var-open.js
-    static-init-await-reference.js
+    static-init-await-reference.js interpreted
 
 language/expressions/coalesce 2/24 (8.33%)
     tco-pos-null.js {unsupported: [tail-call-optimization]}
@@ -4096,7 +4090,7 @@ language/expressions/function 24/264 (9.09%)
     scope-name-var-open-strict.js strict
     scope-paramsbody-var-open.js
     static-init-await-binding.js
-    static-init-await-reference.js
+    static-init-await-reference.js interpreted
     unscopables-with.js non-strict
     unscopables-with-in-nested-fn.js non-strict
 
@@ -4117,7 +4111,7 @@ language/expressions/generators 22/290 (7.59%)
     scope-name-var-open-strict.js strict
     scope-paramsbody-var-open.js
     static-init-await-binding.js
-    static-init-await-reference.js
+    static-init-await-reference.js interpreted
     unscopables-with.js non-strict
     unscopables-with-in-nested-fn.js non-strict
     yield-as-function-expression-binding-identifier.js non-strict
@@ -4244,12 +4238,12 @@ language/expressions/object 82/1170 (7.01%)
     method-definition/params-dflt-meth-ref-arguments.js
     method-definition/private-name-early-error-gen.js
     method-definition/private-name-early-error-gen-inside-class.js
-    method-definition/static-init-await-binding-accessor.js
-    method-definition/static-init-await-binding-generator.js
-    method-definition/static-init-await-binding-normal.js
-    method-definition/static-init-await-reference-accessor.js
-    method-definition/static-init-await-reference-generator.js
-    method-definition/static-init-await-reference-normal.js
+    method-definition/static-init-await-binding-accessor.js interpreted
+    method-definition/static-init-await-binding-generator.js interpreted
+    method-definition/static-init-await-binding-normal.js interpreted
+    method-definition/static-init-await-reference-accessor.js interpreted
+    method-definition/static-init-await-reference-generator.js interpreted
+    method-definition/static-init-await-reference-normal.js interpreted
     method-definition/yield-as-function-expression-binding-identifier.js non-strict
     __proto__-duplicate.js
     __proto__-permitted-dup-shorthand.js
@@ -4905,8 +4899,7 @@ language/module-code 297/584 (50.86%)
 
 language/punctuators 0/11 (0.0%)
 
-language/reserved-words 1/27 (3.7%)
-    await-script.js
+language/reserved-words 0/27 (0.0%)
 
 language/rest-parameters 1/11 (9.09%)
     arrow-function.js
@@ -5873,9 +5866,10 @@ language/statements/class 944/4366 (21.62%)
     static-init-statement-list-optional.js interpreted
     static-init-super-property.js
 
-language/statements/const 2/136 (1.47%)
+language/statements/const 3/136 (2.21%)
     syntax/const-invalid-assignment-next-expression-for.js
-    static-init-await-binding-valid.js
+    static-init-await-binding-invalid.js
+    static-init-await-binding-valid.js interpreted
 
 language/statements/continue 2/24 (8.33%)
     static-init-with-label.js
@@ -6028,8 +6022,9 @@ language/statements/labeled 2/24 (8.33%)
     static-init-invalid-await.js
     tco.js {unsupported: [tail-call-optimization]}
 
-language/statements/let 1/145 (0.69%)
-    static-init-await-binding-valid.js
+language/statements/let 2/145 (1.38%)
+    static-init-await-binding-invalid.js
+    static-init-await-binding-valid.js interpreted
 
 language/statements/return 1/16 (6.25%)
     tco.js {unsupported: [tail-call-optimization]}
@@ -6049,7 +6044,7 @@ language/statements/switch 11/111 (9.91%)
 
 language/statements/throw 0/14 (0.0%)
 
-language/statements/try 14/201 (6.97%)
+language/statements/try 15/201 (7.46%)
     12.14-13.js non-strict
     12.14-14.js non-strict
     12.14-15.js non-strict
@@ -6060,7 +6055,8 @@ language/statements/try 14/201 (6.97%)
     cptn-finally-skip-catch.js
     cptn-finally-wo-catch.js
     scope-catch-block-lex-open.js
-    static-init-await-binding-valid.js
+    static-init-await-binding-invalid.js
+    static-init-await-binding-valid.js interpreted
     tco-catch.js {unsupported: [tail-call-optimization]}
     tco-catch-finally.js {unsupported: [tail-call-optimization]}
     tco-finally.js {unsupported: [tail-call-optimization]}
@@ -6068,7 +6064,7 @@ language/statements/try 14/201 (6.97%)
 language/statements/using 1/1 (100.0%)
     throws-if-initializer-not-object.js
 
-language/statements/variable 8/178 (4.49%)
+language/statements/variable 9/178 (5.06%)
     dstr/ary-ptrn-elem-id-static-init-await-invalid.js
     dstr/ary-ptrn-elem-id-static-init-await-valid.js interpreted
     dstr/obj-ptrn-elem-id-static-init-await-valid.js
@@ -6076,7 +6072,8 @@ language/statements/variable 8/178 (4.49%)
     12.2.1-20-s.js strict
     12.2.1-21-s.js strict
     12.2.1-9-s.js strict
-    static-init-await-binding-valid.js
+    static-init-await-binding-invalid.js
+    static-init-await-binding-valid.js interpreted
 
 language/statements/while 1/38 (2.63%)
     tco-body.js {unsupported: [tail-call-optimization]}
