ES2022: Implement private-in check (ergonomic brand checks)
Implement the ES2022 "ergonomic brand checks" feature that allows
checking if an object has a private field using the syntax `#field in obj`.

This adds:
- IN_PRIVATE token for the private-in expression
- PRIVATE_NAME_IN property on Node to mark private-in expressions
- Parser support in relExpr() to parse #name in expr syntax
- IRFactory transformation to create IN_PRIVATE nodes
- ScriptRuntime.privateIn() method for runtime brand checking
- CodeGenerator handler for interpreter mode
- Interpreter handler with DoInPrivate instruction class
- BodyCodegen handlers for compiled mode (both expression and jump versions)

Test262 improvement: 7 tests now pass in language/expressions/in.

Remaining failures are related to:
- Static semantic validation (SyntaxError at parse time for invalid identifiers)
- Tracking the [+In] grammar production parameter in for-loop contexts
- 'await' as identifier outside async functions (separate issue)

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -4131,18 +4131,11 @@ language/expressions/import.meta 5/22 (22.73%)
     import-meta-is-an-ordinary-object.js strict
     same-object-returned.js strict
 
-language/expressions/in 11/36 (30.56%)
-    private-field-presence-accessor.js
-    private-field-presence-accessor-shadowed.js
-    private-field-presence-field.js
-    private-field-presence-field-shadowed.js
-    private-field-presence-method.js
-    private-field-presence-method-shadowed.js
+language/expressions/in 4/36 (11.11%)
+    private-field-in.js
+    private-field-invalid-identifier-complex.js
+    private-field-invalid-identifier-simple.js
     private-field-rhs-await-absent.js
-    private-field-rhs-await-present.js
-    private-field-rhs-non-object.js
-    private-field-rhs-unresolvable.js
-    private-field-rhs-yield-present.js
 
 language/expressions/instanceof 0/43 (0.0%)
 
