Fix compiled-mode class field computed property names (46 tests)
In the compiled path, generateFieldArrays stored raw expression results
as field keys without normalizing them. Values like null, floats, or
function objects didn't match the String/Number/Symbol type checks in
initializeInstanceFields and createClass, causing fields to be silently
skipped.

Add ScriptRuntime.normalizeFieldKey() that preserves non-negative
integers as Integer (for indexed storage), Symbols as-is, and converts
everything else via ToPropertyKey. Call it in generateFieldArrays after
evaluating computed key expressions.

--- a/tests/testsrc/test262.properties
+++ b/tests/testsrc/test262.properties
@@ -3042,7 +3042,7 @@ language/expressions/call 7/92 (7.61%)
     tco-non-eval-global.js {unsupported: [tail-call-optimization]}
     tco-non-eval-with.js {unsupported: [tail-call-optimization]}
 
-language/expressions/class 267/4059 (6.58%)
+language/expressions/class 244/4059 (6.01%)
     async-gen-method-static/yield-promise-reject-next.js
     async-gen-method-static/yield-promise-reject-next-catch.js
     async-gen-method-static/yield-promise-reject-next-for-await-of-async-iterator.js
@@ -3121,11 +3121,6 @@ language/expressions/class 267/4059 (6.58%)
     elements/async-gen-private-method/yield-star-next-non-object-ignores-then.js
     elements/async-gen-private-method/yield-star-next-then-returns-abrupt.js
     elements/async-gen-private-method/yield-star-sync-throw.js
-    elements/evaluation-error/computed-name-toprimitive-err.js compiled
-    elements/evaluation-error/computed-name-toprimitive-returns-noncallable.js compiled
-    elements/evaluation-error/computed-name-toprimitive-returns-nonobject.js compiled
-    elements/evaluation-error/computed-name-tostring-err.js compiled
-    elements/evaluation-error/computed-name-valueof-err.js compiled
     elements/gen-private-method-static/yield-spread-obj.js compiled
     elements/gen-private-method/yield-spread-obj.js compiled
     elements/private-methods/prod-private-method-initialize-order.js
@@ -3154,8 +3149,7 @@ language/expressions/class 267/4059 (6.58%)
     elements/class-name-static-initializer-default-export.js strict
     elements/class-name-static-initializer-expr.js
     elements/comp-name-init-err-contains-arguments.js
-    elements/computed-name-toprimitive.js compiled
-    elements/computed-name-toprimitive-symbol.js
+    elements/computed-name-toprimitive-symbol.js interpreted
     elements/derived-cls-direct-eval-contains-superproperty-1.js
     elements/derived-cls-direct-eval-contains-superproperty-2.js
     elements/direct-eval-err-contains-arguments.js
@@ -3168,7 +3162,6 @@ language/expressions/class 267/4059 (6.58%)
     elements/fields-string-name-propname-constructor.js
     elements/fields-string-name-static-propname-constructor.js
     elements/fields-string-name-static-propname-prototype.js
-    elements/init-value-defined-after-class.js compiled
     elements/intercalated-static-non-static-computed-fields.js
     elements/literal-name-init-err-contains-arguments.js
     elements/multiple-definitions-rs-static-async-generator-method-privatename-identifier.js compiled
@@ -3261,26 +3254,10 @@ language/expressions/class 267/4059 (6.58%)
     cpn-class-expr-accessors-computed-property-name-from-yield-expression.js compiled
     cpn-class-expr-computed-property-name-from-await-expression.js strict
     cpn-class-expr-computed-property-name-from-yield-expression.js compiled
-    cpn-class-expr-fields-computed-property-name-from-arrow-function-expression.js compiled
-    cpn-class-expr-fields-computed-property-name-from-async-arrow-function-expression.js compiled
     cpn-class-expr-fields-computed-property-name-from-await-expression.js strict
-    cpn-class-expr-fields-computed-property-name-from-decimal-literal.js compiled
-    cpn-class-expr-fields-computed-property-name-from-function-declaration.js compiled
-    cpn-class-expr-fields-computed-property-name-from-function-expression.js compiled
-    cpn-class-expr-fields-computed-property-name-from-generator-function-declaration.js compiled
-    cpn-class-expr-fields-computed-property-name-from-math.js compiled
-    cpn-class-expr-fields-computed-property-name-from-null.js compiled
     cpn-class-expr-fields-computed-property-name-from-string-literal.js
     cpn-class-expr-fields-computed-property-name-from-yield-expression.js compiled
-    cpn-class-expr-fields-methods-computed-property-name-from-arrow-function-expression.js compiled
-    cpn-class-expr-fields-methods-computed-property-name-from-async-arrow-function-expression.js compiled
     cpn-class-expr-fields-methods-computed-property-name-from-await-expression.js strict
-    cpn-class-expr-fields-methods-computed-property-name-from-decimal-literal.js compiled
-    cpn-class-expr-fields-methods-computed-property-name-from-function-declaration.js compiled
-    cpn-class-expr-fields-methods-computed-property-name-from-function-expression.js compiled
-    cpn-class-expr-fields-methods-computed-property-name-from-generator-function-declaration.js compiled
-    cpn-class-expr-fields-methods-computed-property-name-from-math.js compiled
-    cpn-class-expr-fields-methods-computed-property-name-from-null.js compiled
     cpn-class-expr-fields-methods-computed-property-name-from-string-literal.js
     cpn-class-expr-fields-methods-computed-property-name-from-yield-expression.js compiled
     params-dflt-meth-ref-arguments.js
@@ -4154,7 +4131,7 @@ language/statements/block 2/21 (9.52%)
 
 language/statements/break 0/20 (0.0%)
 
-language/statements/class 317/4366 (7.26%)
+language/statements/class 294/4366 (6.73%)
     async-gen-method-static/yield-promise-reject-next.js
     async-gen-method-static/yield-promise-reject-next-catch.js
     async-gen-method-static/yield-promise-reject-next-for-await-of-async-iterator.js
@@ -4233,11 +4210,6 @@ language/statements/class 317/4366 (7.26%)
     elements/async-gen-private-method/yield-star-next-non-object-ignores-then.js
     elements/async-gen-private-method/yield-star-next-then-returns-abrupt.js
     elements/async-gen-private-method/yield-star-sync-throw.js
-    elements/evaluation-error/computed-name-toprimitive-err.js compiled
-    elements/evaluation-error/computed-name-toprimitive-returns-noncallable.js compiled
-    elements/evaluation-error/computed-name-toprimitive-returns-nonobject.js compiled
-    elements/evaluation-error/computed-name-tostring-err.js compiled
-    elements/evaluation-error/computed-name-valueof-err.js compiled
     elements/gen-private-method-static/yield-spread-obj.js compiled
     elements/gen-private-method/yield-spread-obj.js compiled
     elements/private-methods/prod-private-method-initialize-order.js
@@ -4265,8 +4237,7 @@ language/statements/class 317/4366 (7.26%)
     elements/arrow-fnc-init-err-contains-arguments.js
     elements/class-field-is-observable-by-proxy.js
     elements/comp-name-init-err-contains-arguments.js
-    elements/computed-name-toprimitive.js compiled
-    elements/computed-name-toprimitive-symbol.js
+    elements/computed-name-toprimitive-symbol.js interpreted
     elements/computed-property-abrupt-completition.js
     elements/derived-cls-direct-eval-contains-superproperty-1.js
     elements/derived-cls-direct-eval-contains-superproperty-2.js
@@ -4279,7 +4250,6 @@ language/statements/class 317/4366 (7.26%)
     elements/fields-string-name-propname-constructor.js
     elements/fields-string-name-static-propname-constructor.js
     elements/fields-string-name-static-propname-prototype.js
-    elements/init-value-defined-after-class.js compiled
     elements/intercalated-static-non-static-computed-fields.js
     elements/literal-name-init-err-contains-arguments.js
     elements/multiple-definitions-rs-static-async-generator-method-privatename-identifier.js compiled
@@ -4412,26 +4382,10 @@ language/statements/class 317/4366 (7.26%)
     cpn-class-decl-accessors-computed-property-name-from-yield-expression.js compiled
     cpn-class-decl-computed-property-name-from-await-expression.js strict
     cpn-class-decl-computed-property-name-from-yield-expression.js compiled
-    cpn-class-decl-fields-computed-property-name-from-arrow-function-expression.js compiled
-    cpn-class-decl-fields-computed-property-name-from-async-arrow-function-expression.js compiled
     cpn-class-decl-fields-computed-property-name-from-await-expression.js strict
-    cpn-class-decl-fields-computed-property-name-from-decimal-literal.js compiled
-    cpn-class-decl-fields-computed-property-name-from-function-declaration.js compiled
-    cpn-class-decl-fields-computed-property-name-from-function-expression.js compiled
-    cpn-class-decl-fields-computed-property-name-from-generator-function-declaration.js compiled
-    cpn-class-decl-fields-computed-property-name-from-math.js compiled
-    cpn-class-decl-fields-computed-property-name-from-null.js compiled
     cpn-class-decl-fields-computed-property-name-from-string-literal.js
     cpn-class-decl-fields-computed-property-name-from-yield-expression.js compiled
-    cpn-class-decl-fields-methods-computed-property-name-from-arrow-function-expression.js compiled
-    cpn-class-decl-fields-methods-computed-property-name-from-async-arrow-function-expression.js compiled
     cpn-class-decl-fields-methods-computed-property-name-from-await-expression.js strict
-    cpn-class-decl-fields-methods-computed-property-name-from-decimal-literal.js compiled
-    cpn-class-decl-fields-methods-computed-property-name-from-function-declaration.js compiled
-    cpn-class-decl-fields-methods-computed-property-name-from-function-expression.js compiled
-    cpn-class-decl-fields-methods-computed-property-name-from-generator-function-declaration.js compiled
-    cpn-class-decl-fields-methods-computed-property-name-from-math.js compiled
-    cpn-class-decl-fields-methods-computed-property-name-from-null.js compiled
     cpn-class-decl-fields-methods-computed-property-name-from-string-literal.js
     cpn-class-decl-fields-methods-computed-property-name-from-yield-expression.js compiled
     params-dflt-meth-ref-arguments.js
