Fix Function.prototype.toString source ranges, Array.push overflow, and CI config (37 tests)
- Parser: thread sourceStart through function() to capture correct position
  before peekToken/matchToken modify ts.tokenBeg. Fixes toString for async
  functions, generators, class methods, getters/setters, and object literal
  methods.
- NativeArray: add MAX_SAFE_INTEGER overflow check to js_push(), matching
  the existing check in js_unshift().
- CI: update test262 job from Java 11 to Java 21 to match the test262.properties
  baseline. Exclude Test262SuiteTest from default check runs since results are
  Java-version-dependent; it runs separately in the dedicated test262 CI job.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -68,16 +68,16 @@ jobs:
       uses: actions/setup-java@f2beeb24e141e01a676f977032f5a29d81c9e27e # v5.1.0
       with:
         java-version: |
-          11
+          21
           25
         distribution: 'adopt'
     - name: Check current state of test262.properties
       id: hashBefore
       run: echo "hash=${{ hashFiles('./tests/testsrc/test262.properties') }}" >> $GITHUB_OUTPUT
     - name: Run test262 tests
-      # Currently Java 11 is required to have a reproducible result
+      # Java 21 is used for a reproducible result (test262.properties is baselined on Java 21)
       env:
-        RHINO_TEST_JAVA_VERSION: "11"
+        RHINO_TEST_JAVA_VERSION: "21"
       run: >-
         ./gradlew :tests:test --tests Test262SuiteTest -DupdateTest262properties
     - name: Check updated state of test262.properties
