Node.js module resolution, CJS/ESM interop, codegen fallback, and parser fixes
- Add Node.js module resolution algorithm (node_modules, package.json exports/imports)
- Add CJS-to-ESM interop with synthetic named exports from module.exports properties
- Add --node-modules and --module flags to shell for running ESM with node_modules
- Widen codegen catch to include IllegalStateException for interpreter fallback
- Fix export { x as keyword } parsing to allow reserved words as exported names
- Fix async property and return comma parsing edge cases

--- a/rhino/build.gradle
+++ b/rhino/build.gradle
@@ -81,6 +81,9 @@ decycle {
     // accepted cycle: o.m.j.es6module is strongly coupled to o.m.j (ES6 modules need core runtime)
     ignoring from: "org.mozilla.javascript.*", to: "org.mozilla.javascript.es6module.*"
 
+    // accepted cycle: o.m.j.node.module is strongly coupled to o.m.j (Node module resolution needs core runtime)
+    ignoring from: "org.mozilla.javascript.*", to: "org.mozilla.javascript.node.module.*"
+
     // accepted cycle: typedarrays are strongly coupled. (See #1893 of an idea, how to remove)
     ignoring from: "org.mozilla.javascript.ScriptRuntime", to: "org.mozilla.javascript.typedarrays.*"
     ignoring from: "org.mozilla.javascript.NativeArrayIterator", to: "org.mozilla.javascript.typedarrays.NativeTypedArrayView"
